# 2019

./: .gitignore  README.md
International/LangSwitch/LangSwitch/: LangSwitch.pro  lang_en.ts  lang_la.qm  lang_la.ts  lang_zh.ts  langswitch.cpp  langswitch.h  main.cpp
International/TestHello/: TestHello.pro  TestHello.qm  TestHello.ts  lang_Ar.ts  lang_en.qm  lang_en.ts  lang_zh.qm  lang_zh.ts  main.cpp  testhello.cpp  testhello.h  testhello.ui
International/TestHello/outside/otsCommon/: CMakeLists.txt  MessageBox.cpp  MessageBox.h  MessageBox.ui  main.cpp
International/TestHello/outside/otsDisplayControl/: AddMirrorWidget.ui  AddModelWidget.ui  AddPollWidget.ui  CMakeLists.txt  MainEntrance.cpp  MainEntrance.h  MainWidget.cpp  MainWidget.h  OperationWidget.cpp  OperationWidget.h  PreviewDialog.ui  otsDisplayControl.qrc
International/TestHello/outside/otsLayoutModel/: CMakeLists.txt  LayoutButton.cpp  LayoutButton.h  LayoutModelWidget.cpp  LayoutModelWidget.h  LayoutModelWidget.ui  MainEntrance.cpp  MainEntrance.h  OperationLayoutWidget.cpp  OperationLayoutWidget.h  SetCommonLayoutDialog.ui
International/TestHello/outside/otsManageAll/: CMakeLists.txt  ConfigIPIDWidget.cpp  ConfigIPIDWidget.h  ConfigIPIDWidget.ui  MainEntrance.cpp  MainEntrance.h  ManageWidget.cpp  ManageWidget.h  ManageWidget.ui  Start_InitData.cpp  Start_InitData.h  Start_InitData.ui  otsManageAll.qrc
International/TestHello/outside/otsManagerMode/: AddAccount.cpp  AddAccount.h  CMakeLists.txt  MainEntrance.cpp  MainEntrance.h  MainWidget.cpp  MainWidget.h  PropertyDialog.cpp  PropertyDialog.h  ScreenWidgetManage.cpp  ScreenWidgetManage.h  SignalGroupManageWidget.cpp  SignalGroupManageWidget.h  SignalGroupManageWidget.ui  signalgroupManagerTree.cpp  (+1 more)
International/TestHello/outside/otsScreenSwitch/: CMakeLists.txt  MainEntrance.cpp  MainEntrance.h  ScreenSwitchWidget.ui  screenswitchwidget.cpp  screenswitchwidget.h
International/Udp Socket/UDP/: UDP.pro  main.cpp  qudpapp.cpp  qudpapp.h  qudpapp.ui
Logger/: Logger.pro  main.cpp
Logger-Sample/Logger-Sample/: Logger-Sample.pro
Logger-Sample/Logger-Sample/plog/: Severity.h
Test/Test/: MainEntrance.cpp  ScreenLoginWidget.cpp  ScreenLoginWidget.h  ScreenLoginWidget.ui  Test.pro  main.cpp
Test/build-Test-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_ScreenLoginWidget.h
Test/build-Test-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/debug/: moc_ScreenLoginWidget.cpp
Test1/Test/: Test.pro
TestUI/TestUI/: TestUI.pro  mainwindow.ui
ToolBox/ToolBox/: ToolBox.pro  customtoolbutton.cpp  customtoolbutton.h  customtoolbutton.ui  main.cpp  toolbox.cpp  toolbox.h
VLayout/VLayout/: VLayout.pro  main.cpp  widget.cpp  widget.ui
completer/Completer/: Completer.pro  widget.cpp  widget.ui
sprint/sprintf-usage/: sprintf-usage.sdf  sprintf-usage.sln
sprint/sprintf-usage/sprintf-usage/: main.cpp  sprintf-usage.vcxproj
(+54 files in other folders)
